# intent-citation-network

./: .gitignore  README.md  pyproject.toml
notebooks/: 3c.ipynb  acl_arc.ipynb  scicite.ipynb
notebooks/unarxiv/: unarxiv_filter_sample.ipynb  unarxiv_network_analysis.ipynb  unarxiv_pre_process.ipynb
src/gan_bert_src/: README.md  cli_optuna.py  cli_train.py  cli_tsne.py  requirements.txt
src/gan_bert_src/gan_bert/: __init__.py  config.py  data.py  losses.py  models.py  train_eval.py  utils.py
src/network/: network_tools.py
src/utils/: common.py  plots.py  unarxiv_pre_processing.py
