[project]
name = "intent-citation-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "igraph>=1.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.4",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "pandas>=2.3.1",
    "powerlaw>=1.5",
    "seaborn>=0.13.2",
    "transformers>=4.53.2",
    "xnetwork>=1.0.4",
]
